<resources>
    <string name="app_name">Weather Utils</string>
    <string name="menu_button_for_weather_window">Menu button for weather window</string>
    <string name="menu_button_for_notify_window">Menu button for Notify window</string>
    <string name="settings">Settings</string>
    <string name="location_permission_description">Location permission needed to get your current location(without it application won\'t work)</string>
    <string name="permission">Permission</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="clear_application_data">Clear application data</string>
    <string name="clears_application_settings">Clears application settings</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="turn_on_location_message">For better performance turn on internet too</string>
    <string name="notification">Notifications</string>
    <string name="forecast">Forecast</string>
    <string name="weather">Weather</string>
    <string name="cloud_cover">Cloud cover: </string>
    <string name="latitude">Latitude: </string>
    <string name="longtitude">, longitude: </string>
    <string name="humidity">Humidity: </string>
    <string name="temperature">Temperature: </string>
    <string name="sunrise">Sunrise: </string>
    <string name="sunset">, sunset: </string>
    <string name="day">Day</string>
    <string name="pick_remain_time">Pick remain time</string>
    <string name="notify_for">Notify for:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="make_alarm">Make alarm</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="night">Night</string>
    <string name="day_night">Day/Night</string>
    <string name="notification_channel_name">Weather alarm channel</string>
    <string name="notification_channel_desc">This channel creates weather alarms</string>
    <string name="make_a_call_for">Make a call for: %02d:%02d</string>
    <string name="gonna_call_in">Gonna call: %s</string>
</resources>
